getFirst()をget(0)に変更